# tx-generator

./: CHANGELOG.md  Cargo.toml  README.md  tx_stats.py
.github/workflow/: rust.yml
.github/workflows/: rust.yml
src/: generator.rs  logger.rs  main.rs
