[package]
name = "tx-generator"
version = "0.1.0"
authors = ["Exonum Team <exonum@bitfury.com>"]
edition = "2018"

[dependencies]
atomic-counter = "1.0"
byteorder = "1.3"
crossbeam = "0.7"
env_logger = "0.6"
hex = "0.3.2"
exonum = { git = "https://github.com/exonum/exonum", branch = "dynamic_services" }
exonum-cryptocurrency-advanced = { git = "https://github.com/exonum/exonum", branch = "dynamic_services" }
log = "0.4"
rand = "0.6"
rand_xorshift = "0.1"
reqwest = "0.9"
serde = "1.0"
serde_json = "1.0"
structopt = "0.2"
