[package]
name = "tx-generator"
version = "0.2.0"
publish = false
authors = ["The Exonum Team <contact@exonum.com>"]
edition = "2018"

[dependencies]
atomic-counter = "1.0"
byteorder = "1.3"
crossbeam = "0.7"
env_logger = "0.7"
hex = "0.4"
exonum = { git = "https://github.com/exonum/exonum", tag = "v1.0.0"  }
exonum-cryptocurrency-advanced = { git = "https://github.com/exonum/exonum", tag = "v1.0.0"  }
log = "0.4"
rand = "0.7"
rand_xorshift = "0.2"
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
