[package]
name = "tx-generator"
version = "0.2.0"
publish = false
authors = ["The Exonum Team <contact@exonum.com>"]
edition = "2021"

[dependencies]
atomic-counter = "1.0"
byteorder = "1.3"
crossbeam = "0.8"
env_logger = "0.9"
hex = "0.4"
exonum = { git = "https://github.com/exonum/exonum" }
exonum-cryptocurrency-advanced = { git = "https://github.com/exonum/exonum" }
log = "0.4"
rand = "0.8"
rand_xorshift = "0.3"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
